tests/NormalTests/paczka1/fuzzy1/54028765.err
Error in line 1: S604 S723 99,2
Error in line 20: kEOkSocBYs S604 48,0
Error in line 24: sMG3 S604 93,6
Error in line 23: kEOkSocBYs S677 23,0
Error in line 13: VXYu S723 38,7
